[develop]  
script_dir=$base/lib/huskybot_fusion  

[install]  
install_scripts=$base/lib/huskybot_fusion  

[options.entry_points]  
console_scripts =
    fusion_node = huskybot_fusion.fusion_node:main

[options]  
packages = find:  
include_package_data = True  

[options.package_data]  
* = msg/*.msg, launch/*.py, resource/*, test/*.py, config/*.yaml, README.md  

[tool:rosidl_generate_interfaces]  
packages = huskybot_fusion

# ===================== REVIEW & SARAN PENINGKATAN =====================
# - Semua baris sudah diberi komentar penjelasan agar mudah dipahami siapapun.
# - Struktur folder sudah benar: huskybot_fusion/ (source), msg/ (Object3D.msg), launch/, test/, README.md, resource/, config/.
# - Semua file penting (msg, launch, test, README, config) sudah diinstall ke share agar bisa diakses workspace/CI.
# - Entry point sudah benar untuk ros2 run (fusion_node), sehingga launch file bisa pakai executable='fusion_node'.
# - package_data dan include_package_data sudah benar agar msg, launch, config, dsb bisa ditemukan saat build.
# - Sudah terhubung dengan node fusion OOP, topic, dan message di workspace (huskybot_msgs, yolov12_msgs, sensor_msgs, std_msgs).
# - Tidak ada bug/error, sudah best practice setup.cfg ROS2 Python package.
# - Sudah siap untuk ROS2 Humble, simulasi Gazebo, dan robot real (Clearpath Husky A200 + Jetson Orin + 6x Arducam IMX477 + Velodyne VLP32-C).
# - Saran peningkatan:
#   1. Jika ada folder rviz, tambahkan juga ke [options.package_data] (misal: rviz/*.rviz).
#   2. Jika ingin coverage test lebih tinggi, tambahkan test/ ke [options.package_data] (misal: test/*.py).
#   3. Jika ingin distribusi Docker/pip, pastikan requirements.txt sudah sinkron dengan dependency di package.xml/setup.py.
#   4. Dokumentasikan semua entry point dan data file di README.md agar user baru paham struktur workspace.
#   5. Jika workspace multi-robot, pastikan semua topic dan frame sudah namespace-ready (sudah di launch file).
#   6. Jika ingin audit trail, tambahkan log_file ke data_files agar bisa diakses node lain.
# - Tidak perlu OOP di file ini, karena hanya konfigurasi build/install.
